replace URIResolver by ResourceResolver